[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "path_finding"
version = "0.1.0"
description = "Pathfinding algorithms for maze solving (BFS, DFS, A*, MDP Value/Policy Iteration)"
authors = [
    {name = "Advik"}
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "flask>=2.0.0",
    "flask-cors>=3.0.0",
    "selenium>=4.0.0",
    "webdriver-manager>=3.8.0",
    "requests>=2.25.0"
]

[project.optional-dependencies]
analysis = [
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "numpy>=1.20.0",
]
dev = [
    "pytest>=7.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["path_finding*"]
exclude = ["submodules*"]
